Convert to use identifiers instead of names
Implement getters by identifier where needed and convert code to use the identifier instead of the name on the exposed facing APIs