@@ -5,7 +5,6 @@ import static org.molgenis.emx2.SelectColumn.s;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.jooq.tools.StringUtils;
 import org.molgenis.emx2.Column;
 import org.molgenis.emx2.Query;
@@ -25,8 +24,7 @@ public class QueryHelper {
     Query query = table.query();
     for (Column column : table.getMetadata().getColumns()) {
       if (column.isOntology() || column.isReference()) {
-        List<Column> ontoRefCols =
-            column.getRefTable().getColumns().stream().collect(Collectors.toList());
+        List<Column> ontoRefCols = column.getRefTable().getColumns().stream().toList();
         ArrayList<String> colNames = new ArrayList<>();
         for (Column ontoRefCol : ontoRefCols) {
           colNames.add(ontoRefCol.getName());
@@ -101,7 +99,7 @@ public class QueryHelper {
       ArrayList<Column> pathToColumn, String columnSemanticTagOrIRI, Table table) {
 
     for (Column column : table.getMetadata().getColumns()) {
-      if (column.getName().startsWith("mg_")) {
+      if (column.getIdentifier().startsWith("mg_")) {
         continue;
       }
 
